test/Fail/Issue2365.err
Issue2365.agda:19.5-8: error: [NegativeLiteralInPattern]
Negative literals are not supported in patterns
when checking that the pattern -20 has type Int
